@@ -6,6 +6,9 @@ This document contains a list of changes for each release of Krang.
 
 =over
 
+L<Krang::Story> now handles calls to find() with an arrayref of
+site_ids. [Peter]
+
 =item *
 
 L<Krang::Media> now handles calls to find() with an arrayref of
